--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -103,13 +103,15 @@
       display: grid;
       grid-template-columns: repeat(14, 1fr);
       grid-template-rows: repeat(4, 60px);
-      gap: 5px;
-      padding: 10px;
-      justify-items: center;
+      gap: 3px; /* 間隔をさらに詰める */
+      padding: 5px;
+      justify-content: center; /* 中央寄せ */
       background-color: #444;
       position: fixed;
       bottom: 0;
-      width: 100%;
+      width: auto;
+      max-width: 100%;
+      margin: 0 auto; /* 中央揃え */
       box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
       overflow-x: auto;
     }
@@ -117,11 +119,9 @@
       background-color: #eee;
       border: 1px solid #ccc;
       border-radius: 5px;
-      width: 100%;
-      max-width: 60px;
-      height: 100%;
+      width: 50px;
+      height: 55px;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
       cursor: pointer;
@@ -129,9 +129,9 @@
       overflow: hidden;
     }
     .keyboard-button img {
-      width: 100%;
+      width: 90%;
       height: auto;
-      object-fit: cover;
+      object-fit: contain;
       border-radius: 5px;
     }
     .keyboard-button:hover {
@@ -141,16 +141,16 @@
 
     /* iPhone対応のサイズ調整 */
     @media (max-width: 768px) {
-      .field-slot, .field-card {
-        width: calc((100vw - 70px) / 8);
-        height: calc(((100vw - 70px) / 8) * 1.33);
+      .keyboard-container {
+        grid-template-columns: repeat(14, minmax(35px, 1fr));
+        gap: 2px;
       }
-      .field-box {
-        gap: 6px;
-        padding: 6px;
+      .keyboard-button {
+        width: 45px;
+        height: 50px;
       }
-      .field-row {
-        gap: 4px;
+      .keyboard-button img {
+        width: 85%;
       }
     }
   </style>
