--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -103,15 +103,14 @@
       display: grid;
       grid-template-columns: repeat(14, 1fr);
       grid-template-rows: repeat(4, 60px);
-      gap: 3px; /* 間隔をさらに詰める */
+      gap: 3px;
       padding: 5px;
-      justify-content: center; /* 中央寄せ */
+      justify-content: center;
       background-color: #444;
       position: fixed;
       bottom: 0;
       width: auto;
-      max-width: 100%;
-      margin: 0 auto; /* 中央揃え */
+      margin: 0 auto;
       box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
       overflow-x: auto;
     }
@@ -119,8 +118,8 @@
       background-color: #eee;
       border: 1px solid #ccc;
       border-radius: 5px;
-      width: 50px;
-      height: 55px;
+      width: 45px;
+      height: 50px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -129,7 +128,7 @@
       overflow: hidden;
     }
     .keyboard-button img {
-      width: 90%;
+      width: 85%;
       height: auto;
       object-fit: contain;
       border-radius: 5px;
@@ -142,15 +141,16 @@
     /* iPhone対応のサイズ調整 */
     @media (max-width: 768px) {
       .keyboard-container {
-        grid-template-columns: repeat(14, minmax(35px, 1fr));
+        grid-template-columns: repeat(14, minmax(30px, 1fr));
         gap: 2px;
+        justify-content: center;
       }
       .keyboard-button {
-        width: 45px;
-        height: 50px;
+        width: 40px;
+        height: 45px;
       }
       .keyboard-button img {
-        width: 85%;
+        width: 80%;
       }
     }
   </style>
