--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -118,8 +118,8 @@
       background-color: #eee;
       border: 1px solid #ccc;
       border-radius: 5px;
-      width: 45px;
-      height: 50px;
+      width: 40px;
+      height: 45px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -128,7 +128,7 @@
       overflow: hidden;
     }
     .keyboard-button img {
-      width: 85%;
+      width: 75%;
       height: auto;
       object-fit: contain;
       border-radius: 5px;
@@ -138,19 +138,19 @@
       background-color: #ddd;
     }
 
-    /* iPhone対応のサイズ調整 */
-    @media (max-width: 768px) {
+    /* iPhone 15 Pro Max対応のサイズ調整 */
+    @media (max-width: 932px) {
       .keyboard-container {
-        grid-template-columns: repeat(14, minmax(30px, 1fr));
+        grid-template-columns: repeat(14, minmax(25px, 1fr));
         gap: 2px;
         justify-content: center;
       }
       .keyboard-button {
-        width: 40px;
-        height: 45px;
+        width: 35px;
+        height: 40px;
       }
       .keyboard-button img {
-        width: 80%;
+        width: 70%;
       }
     }
   </style>
