--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -48,7 +48,7 @@
       justify-content: center;
       align-items: center;
       gap: 10px;
-      margin: 10px 0;
+      margin: 5px 0;
     }
     .pattern-selector label, .pattern-selector select, .pattern-selector input {
       font-size: 1rem;
@@ -57,13 +57,13 @@
       display: flex;
       justify-content: center;
       gap: 10px;
-      margin: 10px 0;
+      margin: 5px 0;
     }
     .action-button {
       background-color: #555;
       color: white;
       border: none;
-      padding: 10px 20px;
+      padding: 8px 16px;
       border-radius: 5px;
       cursor: pointer;
       transition: background-color 0.3s;
@@ -77,27 +77,28 @@
       align-items: flex-start;
       flex: 1;
       overflow-x: auto;
-      padding: 10px;
+      padding: 5px;
+      margin-bottom: 110px; /* キーボードとの重なりを防ぐために余白追加 */
     }
     .field-box {
       display: grid;
-      grid-template-rows: repeat(4, 100px);
-      gap: 12px;
+      grid-template-rows: repeat(4, 80px); /* 高さを詰める */
+      gap: 8px; /* 段落幅を詰める */
       border: 2px solid #ccc;
       border-radius: 10px;
-      padding: 10px;
+      padding: 8px;
       background-color: #fff;
-      width: calc(100% - 40px);
+      width: calc(100% - 20px);
       max-width: 800px;
     }
     .field-row {
       display: grid;
-      gap: 10px;
+      gap: 8px; /* 横の隙間も詰める */
     }
     .field-slot, .field-card {
       background-color: #e0e0e0;
       border: 2px dashed #bbb;
-      border-radius: 10px;
+      border-radius: 8px;
       width: 100%;
       height: 100%;
       display: flex;
@@ -110,7 +111,7 @@
     .field-card {
       background-color: white;
       border: 1px solid #ddd;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       overflow: hidden;
       cursor: pointer;
     }
@@ -120,19 +121,19 @@
       max-width: 100%;
       max-height: 100%;
       object-fit: contain;
-      border-radius: 10px;
+      border-radius: 8px;
     }
     .keyboard-container {
       display: grid;
       grid-template-columns: repeat(14, 1fr);
-      grid-template-rows: repeat(4, 100px);
-      gap: 10px;
-      padding: 10px;
+      grid-template-rows: repeat(4, 80px); /* 高さを調整 */
+      gap: 8px; /* 段落幅も詰める */
+      padding: 8px;
       justify-content: center;
       background-color: #444;
       position: fixed;
       bottom: 0;
-      width: calc(100% - 20px);
+      width: calc(100% - 16px);
       max-width: 900px;
       margin: 0 auto;
       box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
@@ -141,7 +142,7 @@
     .keyboard-button {
       background-color: #eee;
       border: 1px solid #ccc;
-      border-radius: 10px;
+      border-radius: 8px;
       width: 100%;
       height: 100%;
       display: flex;
@@ -155,7 +156,7 @@
       width: 100%;
       height: auto;
       object-fit: contain;
-      border-radius: 10px;
+      border-radius: 8px;
     }
     .keyboard-button:hover {
       transform: scale(1.05);
@@ -163,19 +164,12 @@
     }
     @media (max-width: 768px) {
       .field-box {
-        grid-template-rows: repeat(4, 80px);
-        width: calc(100% - 20px);
+        grid-template-rows: repeat(4, 60px); /* スマホ表示時の高さ調整 */
+        width: calc(100% - 10px);
       }
       .field-slot, .field-card {
-        width: calc((100vw - 80px) / 8);
-        height: calc(((100vw - 80px) / 8) * 1.33);
-      }
-      .field-card img {
-        width: 100%;
-        height: auto;
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: contain;
+        width: calc((100vw - 60px) / 8);
+        height: calc(((100vw - 60px) / 8) * 1.33);
       }
       .keyboard-container {
         grid-template-columns: repeat(14, minmax(20px, 1fr));
