--- a/practice.html
+++ b/practice.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>練習モード - ステップキーボード</title>
+  <title>Tap Master - カード記憶ゲーム</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
@@ -15,114 +15,128 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
       height: 100vh;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+    .card-container {
+      width: 300px;
+      height: 400px;
+      background-color: #fff;
+      border-radius: 15px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+      display: flex;
+      align-items: center;
+      justify-content: center;
       overflow: hidden;
+      margin-bottom: 20px;
     }
-    .game-container {
-      position: relative;
-      width: 100%;
-      height: 100px;
-      background-color: #333;
-      overflow: hidden;
-      border: 2px solid #555;
-      border-radius: 10px;
-    }
-    .target-zone {
-      position: absolute;
-      left: 20px;
-      top: 10px;
-      width: 80px;
-      height: 80px;
-      border: 3px solid #f39c12;
-      border-radius: 10px;
-    }
-    .card {
-      position: absolute;
-      top: 10px;
-      width: 80px;
-      height: 80px;
-      border-radius: 10px;
-      overflow: hidden;
-      border: 2px solid #ddd;
-      background-color: white;
-    }
-    .card img {
+    .card-container img {
       width: 100%;
       height: 100%;
       object-fit: contain;
     }
-    .start-button {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
+    .button, .mode-button {
       padding: 10px 20px;
       background-color: #f39c12;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 1.2rem;
       transition: background-color 0.3s;
+      margin: 5px;
     }
-    .start-button:hover {
+    .button:hover, .mode-button:hover {
       background-color: #e67e22;
+    }
+    .mode-selector {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="game-container">
-    <div class="target-zone"></div>
+  <h1>Tap Master</h1>
+  <div class="mode-selector">
+    <button class="mode-button" onclick="setMode('saved')">保存カードモード</button>
+    <button class="mode-button" onclick="setMode('random')">ランダムモード</button>
   </div>
-  <button class="start-button" onclick="startGame()">スタート</button>
+  <div class="card-container" id="card-container">
+    <p>モードを選択してください</p>
+  </div>
+  <button class="button" id="start-button" onclick="startGame()" style="display:none;">スタート</button>
+  <button class="button" id="next-button" onclick="showNextCard()" style="display:none;">次へ</button>
 
   <script>
-    let cards = JSON.parse(localStorage.getItem('savedCombination')) || [];
+    let savedCards = JSON.parse(localStorage.getItem('savedCombination')) || [];
+    let allCards = [];
+    let cards = [];
     let currentIndex = 0;
-    const gameContainer = document.querySelector('.game-container');
+    let mode = '';
+
+    fetch('./tap_dance_card_data_updated.json')
+      .then(response => response.json())
+      .then(data => {
+        allCards = data.map(card => card.画像);
+      })
+      .catch(error => console.error('カードデータの読み込みに失敗しました:', error));
+
+    function setMode(selectedMode) {
+      mode = selectedMode;
+      document.getElementById('card-container').innerHTML = '<p>準備完了！スタートを押してください。</p>';
+      document.getElementById('start-button').style.display = 'block';
+    }
 
     function startGame() {
-      if (cards.length === 0) {
+      if (mode === 'saved' && savedCards.length === 0) {
         alert('保存されたカードがありません。');
         return;
       }
-      document.querySelector('.start-button').style.display = 'none';
-      currentIndex = 0;
-      spawnCard();
-    }
-
-    function spawnCard() {
-      if (currentIndex >= cards.length) {
-        alert('練習終了！');
-        document.querySelector('.start-button').style.display = 'block';
+      if (mode === 'random' && allCards.length === 0) {
+        alert('カードデータの読み込みに失敗しました。');
         return;
       }
 
-      const card = document.createElement('div');
-      card.classList.add('card');
+      cards = mode === 'saved' ? [...savedCards] : shuffleArray([...allCards]);
+      currentIndex = 0;
 
-      const img = document.createElement('img');
-      img.src = cards[currentIndex];
-      card.appendChild(img);
+      document.getElementById('start-button').style.display = 'none';
+      document.getElementById('next-button').style.display = 'block';
 
-      gameContainer.appendChild(card);
-      animateCard(card);
-
-      currentIndex++;
-      setTimeout(spawnCard, 2000); // 次のカードを2秒ごとに出現
+      showNextCard();
     }
 
-    function animateCard(card) {
-      let posX = gameContainer.clientWidth;
-      const interval = setInterval(() => {
-        if (posX <= -100) {
-          clearInterval(interval);
-          card.remove();
-        } else {
-          posX -= 5;
-          card.style.left = posX + 'px';
-        }
-      }, 20); // スピード調整
+    function showNextCard() {
+      if (currentIndex >= cards.length) {
+        alert('全てのカードを表示しました！');
+        resetGame();
+        return;
+      }
+
+      const cardContainer = document.getElementById('card-container');
+      cardContainer.innerHTML = '';
+      const img = document.createElement('img');
+      img.src = cards[currentIndex];
+      cardContainer.appendChild(img);
+
+      currentIndex++;
+    }
+
+    function resetGame() {
+      document.getElementById('start-button').style.display = 'block';
+      document.getElementById('next-button').style.display = 'none';
+      document.getElementById('card-container').innerHTML = '<p>モードを選択してください</p>';
+    }
+
+    function shuffleArray(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+      return array;
     }
   </script>
 </body>
