--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -101,24 +101,6 @@
       object-fit: contain;
       border-radius: 8px;
     }
-    .field-controls {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin: 10px 0;
-    }
-    .field-button {
-      background-color: #555;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .field-button:hover {
-      background-color: #777;
-    }
     .keyboard-container {
       display: grid;
       grid-template-columns: repeat(14, 1fr);
@@ -135,41 +117,12 @@
       box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
       overflow-x: auto;
     }
-    .keyboard-button {
-      background-color: #eee;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      transition: transform 0.2s;
-      overflow: hidden;
-    }
-    .keyboard-button img {
-      width: 100%;
-      height: auto;
-      object-fit: contain;
-      border-radius: 8px;
-    }
-    .keyboard-button:hover {
-      transform: scale(1.05);
-      background-color: #ddd;
-    }
   </style>
 </head>
 <body>
   <div class="menu-bar">
     <p class="menu-title">ステップキーボード</p>
     <button class="menu-button" onclick="saveCombination()">保存</button>
-  </div>
-
-  <div class="field-controls">
-    <button class="field-button" onclick="prevField()">◀</button>
-    <span id="field-label">第1フィールド</span>
-    <button class="field-button" onclick="nextField()">▶</button>
   </div>
 
   <div class="field-container" id="field-container">
@@ -182,25 +135,43 @@
   <div class="keyboard-container" id="keyboard-container"></div>
 
   <script>
-    let currentField = 0;
-    function updateFieldLabel() {
-      document.getElementById('field-label').innerText = `第${currentField + 1}フィールド`;
+    const buttonMapping = {
+      'A1': 3, 'A2': 4, 'A3': 5, 'A4': 6, 'A5': 7, 'A6': 8, 'A7': 9, 'A8': 16, 'A9': 15, 'A10': 14, 'A11': 13, 'A12': 12, 'A13': 11, 'A14': 10,
+      'B1': 31, 'B2': 32, 'B3': 33, 'B4': 29, 'B5': 34, 'B6': 35, 'B7': 36, 'B8': 42, 'B9': 41, 'B10': 40, 'B11': 30, 'B12': 39, 'B13': 38, 'B14': 37
+    };
+
+    fetch('./tap_dance_card_data_updated.json')
+      .then(response => response.json())
+      .then(data => {
+        window.cardData = data;
+        createKeyboard();
+        mapCardsToButtons(data);
+      })
+      .catch(error => console.error('データの読み込みに失敗しました:', error));
+
+    function createKeyboard() {
+      const keyboardContainer = document.getElementById('keyboard-container');
+      Object.keys(buttonMapping).forEach(key => {
+        const button = document.createElement('div');
+        button.classList.add('keyboard-button');
+        button.dataset.label = key;
+        keyboardContainer.appendChild(button);
+      });
     }
-    function nextField() {
-      if (currentField < 3) {
-        currentField++;
-        document.getElementById('field-container').scrollLeft += window.innerWidth;
-        updateFieldLabel();
-      }
+
+    function mapCardsToButtons(cards) {
+      document.querySelectorAll('.keyboard-button').forEach(button => {
+        const cardId = buttonMapping[button.dataset.label];
+        const card = cards.find(c => c.カードID === cardId);
+        if (card) {
+          const img = document.createElement('img');
+          img.src = card.画像;
+          img.alt = card.カード名;
+          button.appendChild(img);
+          button.addEventListener('click', () => addCardToField(card));
+        }
+      });
     }
-    function prevField() {
-      if (currentField > 0) {
-        currentField--;
-        document.getElementById('field-container').scrollLeft -= window.innerWidth;
-        updateFieldLabel();
-      }
-    }
-    updateFieldLabel();
   </script>
 </body>
 </html>
